Implement Logic Galley Manager