@@ -1,7 +1,7 @@
 package view;
 
-import locality.NationalityList;
 import domain.Artist;
+import domain.Gallery;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.geometry.Insets;
@@ -12,23 +12,20 @@ import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
+import locality.RegionList;
 import presenter.MainCreateArtists;
+import presenter.MainCreateGallery;
 
 import java.util.Objects;
 
-public class CreateArtistView extends BorderPane {
+public class CreateGalleryView extends BorderPane {
 
-    private TextField textFieldArtistName;
-    private TextField textFieldBirthday;
-    private TextField textFieldDeathday;
-    private TextField textFieldBiography;
-    private TextField textFieldSlug;
+    private TextField textFieldGalleryName;
+    private TextField textFieldEmail;
     private ComboBox<String> statusMenu;
-    private Spinner<Integer> yearBirthdaySpinner;
-    private Spinner<Integer> yearDeathdaySpinner;
     private Label labelSucessMensage;
 
-    public CreateArtistView() {
+    public CreateGalleryView() {
         doLayout();
         ManageMainView manageMainView = new ManageMainView();
         String cssTheme = manageMainView.themeCurrent;
@@ -46,54 +43,33 @@ public class CreateArtistView extends BorderPane {
         setMargin(vBoxTop, new Insets(0, 0, 20, 0));
         setTop(vBoxTop);
 
-
         // ---------------------------------------------- CENTER LAYOUT ----------------------------------------------
         // COMBO BOX
         ObservableList<String> statusOptions = FXCollections.observableArrayList(
-                NationalityList.getAllNationality()
+                RegionList.getAllRegion()
         );
         this.statusMenu = new ComboBox<>(statusOptions);
         statusMenu.setMaxWidth(120);
-        statusMenu.setValue("Nacionalidade");
+        statusMenu.setValue("Região");
         statusMenu.getStyleClass().add("combo-box");
 
-        // SPINNER
-        this.yearBirthdaySpinner = new Spinner<>(0, 2999, 1990);
-        yearBirthdaySpinner.setEditable(true);
-
-        this.yearDeathdaySpinner = new Spinner<>(0, 2999,0);
-        yearDeathdaySpinner.setEditable(true);
-
         // LABELS
-        Label labelArtistName = new Label("Nome do Artista (max. 100 caracteres):");
-        Label labelBirthday = new Label("Ano Nascimento (ex: 1990):");
-        Label labelDeathday = new Label("Ano da Morte (4 dígitos):");
-        Label labelBiography = new Label("Biografia (max.10000 caracteres):");
-        Label labelSlug = new Label("Slug (nome-separado-por-hifén-em-minúsculo):");
+        Label labelGalleryName = new Label("Nome da Galeria (max. 100 caracteres):");
+        Label labelEmail = new Label("Email:");
 
-        this.textFieldArtistName = new TextField();
-        this.textFieldBirthday = new TextField();
-        this.textFieldDeathday = new TextField();
-        this.textFieldBiography = new TextField();
-        this.textFieldSlug = new TextField();
+        this.textFieldGalleryName = new TextField();
+        this.textFieldEmail = new TextField();
 
-        textFieldBiography.setPrefSize(520,200);
+        VBox vBoxArtistName = new VBox(labelGalleryName,textFieldGalleryName);
+        VBox vBoxEmail = new VBox(labelEmail,textFieldEmail);
+        VBox vBoxArtistInfo = new VBox(vBoxArtistName, vBoxEmail);
+        VBox vBoxStatusRegion = new VBox(statusMenu);
+        HBox hBoxCenterLayout = new HBox(vBoxArtistInfo,vBoxStatusRegion);
 
-        VBox vBoxArtistName = new VBox(labelArtistName,textFieldArtistName);
-        VBox vBoxBirthday = new VBox(labelBirthday,yearBirthdaySpinner);
-        VBox vBoxDeathday = new VBox(labelDeathday,yearDeathdaySpinner);
-        VBox vBoxBiography = new VBox(labelBiography,textFieldBiography);
-        VBox vBoxSlug = new VBox(labelSlug,textFieldSlug);
-        HBox hBoxBirthdayDeathday = new HBox(vBoxBirthday, vBoxDeathday);
-        VBox vBoxArtistInfo = new VBox(vBoxArtistName, hBoxBirthdayDeathday, vBoxSlug, vBoxBiography);
-        VBox vBoxStatusNation = new VBox(statusMenu);
-        HBox hBoxCenterLayout = new HBox(vBoxArtistInfo,vBoxStatusNation);
-
-        hBoxBirthdayDeathday.setSpacing(50);
         hBoxCenterLayout.setSpacing(50);
         vBoxArtistInfo.setSpacing(10);
         vBoxArtistInfo.setPrefWidth(520);
-        vBoxStatusNation.setPadding(new Insets(15));
+        vBoxStatusRegion.setPadding(new Insets(15));
 
         this.setCenter(hBoxCenterLayout);
 
@@ -101,20 +77,19 @@ public class CreateArtistView extends BorderPane {
 
         // ADD THE BOTTOM ELEMENTS INSIDE THE DESIGNATED HBOX
         this.setBottom(getFooterBox());
-
     }
 
     private VBox getFooterBox (){
         // Buttons
-        Button createArtistButton = new Button("Criar Artista");
+        Button createGalleryButton = new Button("Criar Galleria");
         Button cancelButton = new Button("Cancelar");
 
-        createArtistButton.getStyleClass().add("button-modern");
+        createGalleryButton.getStyleClass().add("button-modern");
         cancelButton.getStyleClass().add("button-modern");
 
-        createArtistButton.setOnAction(event -> createArtist());
+        createGalleryButton.setOnAction(event -> createGallery());
 
-        cancelButton.setOnAction(e -> getScene().setRoot(new ManageArtistView()));
+        cancelButton.setOnAction(e -> getScene().setRoot(new ManageGalleryView()));
 
         // GIT IMAGE
         String imageGitHubPath = "Icons/Github.png";
@@ -130,7 +105,7 @@ public class CreateArtistView extends BorderPane {
         Label labelButtonStatus = new Label("I~A © 2023 I~A  Todos os direitos reservados");
 
         // DEFINE A HBOX
-        HBox hBoxButtons = new HBox(createArtistButton, cancelButton);
+        HBox hBoxButtons = new HBox(createGalleryButton, cancelButton);
         hBoxButtons.setSpacing(30);
         hBoxButtons.setAlignment(Pos.CENTER_RIGHT);
         this.labelSucessMensage = new Label("");
@@ -188,7 +163,7 @@ public class CreateArtistView extends BorderPane {
         hyperlinkGallery.setOnAction(e -> getScene().setRoot(new ManageGalleryView()));
         hyperlinkExhibition.setOnAction(e -> getScene().setRoot(new ManageExhibitionView()));
         hyperLinkArtwork.setOnAction(e -> getScene().setRoot(new ManageArtworkView()));
-        hyperlinkArtist.getStyleClass().add("actual-page-hyperlink");
+        hyperlinkGallery.getStyleClass().add("actual-page-hyperlink");
 
         VBox vBoxTop = new VBox(hBoxHeader,hBoxHyperlink);
         setMargin(vBoxTop, new Insets(0, 0, 20, 0));
@@ -215,59 +190,33 @@ public class CreateArtistView extends BorderPane {
         // imageView.setPreserveRatio(true);
     }
 
-    public void defaultSizeArtistImage(ImageView imageView){
-        imageView.setFitHeight(160); // Ajuste a altura conforme necessário
-        imageView.setFitWidth(160);  // Ajuste a largura conforme necessário
-        //imageView.setPreserveRatio(true);
-    }
-
-    private void createArtist() {
+    private void createGallery() {
         //STRINGS ATTRIBUTES FOR OBJECT
-        String name = textFieldArtistName.getText();
-        String biography = textFieldBiography.getText();
-        String birthdate = yearBirthdaySpinner.getValue().toString();
-        String deathdate = yearDeathdaySpinner.getValue().toString();
-        String slug = textFieldSlug.getText();
-        String nationality = statusMenu.getValue();
-        String refenceImage = "Images/Artist/ArtistSquare/square0.jpg";
+        String name = textFieldGalleryName.getText();
+        String email = textFieldEmail.getText();
+        String region = statusMenu.getValue();
+        String refenceImage = "Images/Gallery/DefaultGallery.jpg";
 
         //CREATE NEW OBJECT
-        Artist newArtist = new Artist();
-        newArtist.setName(name);
-        newArtist.setBiography(biography);
-        newArtist.setBirthdate(birthdate);
-        newArtist.setDeathdate(deathdate);
-        newArtist.setSlug(slug);
-        newArtist.setNationality(nationality);
-        newArtist.setReferenceImage(refenceImage);
+        Gallery newGallery = new Gallery();
+        newGallery.setNameGallery(name);
+        newGallery.setEmail(email);
+        newGallery.setRegionName(region);
+        newGallery.setReferenceImage(refenceImage);
 
         //ADD TO DATABASE
-        if (newArtist.getName() == null || newArtist.getName().trim().isEmpty()
-            || newArtist.getName().isBlank() || Objects.equals(statusMenu.getValue(), "Nacionalidade") ||
+        if (newGallery.getNameGallery() == null || newGallery.getNameGallery().trim().isEmpty()
+            || newGallery.getNameGallery().isBlank() || Objects.equals(statusMenu.getValue(), "Região") ||
                 statusMenu.getValue().trim().isEmpty() || statusMenu.getValue().isBlank()) {
             System.out.println("Campo vazio. Não é possível atualizar.");
             labelSucessMensage.setText("Não foi possível atualizar!");
         } else {
-            MainCreateArtists.addArtist(newArtist);
+            MainCreateGallery.addGallery(newGallery);
             labelSucessMensage.setText("Alterações efetuadas com sucesso!");
             System.out.println("atualizado com sucesso");
 
         }
 
-
     }
-
-        // Verifica se a string é um número válido entre 0 e 2023
-        private boolean isValidNumber(String newValue) {
-            if (newValue.isEmpty()) {
-                return true; // Aceitar campo vazio
-            }
-            try {
-                int value = Integer.parseInt(newValue);
-                return value >= 0 && value <= 2023;
-            } catch (NumberFormatException e) {
-                return false; // Não é um número válido
-            }
-        }
 
 }
